# scriptalign

./: README.md  flake.nix
examples/arabic_armenian/: pyproject.toml
examples/arabic_armenian/src/arabic_armenian/: __init__.py  corpus_config.py  orthographies.py  run.py  words.csv
examples/coptic_arabic/src/coptic_arabic/: run.py
src/scriptalign/: __init__.py  formatting.py  io_.py
tests/: test_arabic_armenian_smoke.py  test_coptic_arabic_regression.py  test_formatting.py
